Let MediaObject encode the URL to a Xine MRL. This is not as easy as QUrl::toEncoded as xine then can't know anymore what encoding to use for local files. Instead, for local files, use QFile::encodeName to create an 8-bit string that is then percent encoded as needed and prefixed with "file:/".

BUG: 172242